<resources>
  <string name="app_name">app-java</string>
  <string name="connect">connect</string>
  <string name="disconnect">disconnect</string>
  <string name="stop_monitoring">stop monitoring</string>
  <string name="start_monitoring">start monitoring</string>
  <string name="waiting_for_raw_signal">waiting for raw signal…</string>

  <string name="waiting_for_meditation_signal">waiting for meditation signal...</string>

  <string name="waiting_for_state">waiting for state...</string>
    <string name="turn_on_bluetooth_and_pair_together_with_neuorsky_mindwave_mobile_2">Turn on Bluetooth and pair together with Neuorsky Mindwave Mobile 2.</string>
  <string name="next">Next</string>
  <string name="todo">TODO</string>
    <string name="getting_started">GETTING STARTED</string>
</resources>
