<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gs"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"

      >

    <TextView
        android:id="@+id/getting_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/getting_started"
        />
    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/turn_on_bluetooth_and_pair_together_with_neuorsky_mindwave_mobile_2" />

    <ImageView
        android:id="@+id/headgear_img"
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:src="@drawable/headgear"
        android:contentDescription="@string/todo" />


    <Button
        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/waiting_for_state" />

    <Button
        android:id="@+id/btn_nexr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>