<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >


    <Button
        android:id="@+id/btn_start_monitoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_monitoring"
        />
    <TextView
        android:id="@+id/tv_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/waiting_for_state" />

    <TextView
        android:id="@+id/tv_meditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/waiting_for_meditation_signal" />

    <Button
        android:id="@+id/btn_stop_monitoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_monitoring" />


  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>